--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   auto_route: ^9.2.2
-  flutter_bloc: ^8.1.6
   equatable: ^2.0.5
+  flutter_bloc: ^8.1.6
+  http: ^1.2.2
   json_annotation: ^4.9.0
 
 
